# cvhw2

./: CMakeLists.txt  cvhw2.cpp  faceAlignment.cpp  hw2_report.docx  image_db.cpp  image_db.hpp  list_directory.cpp  list_directory.hpp
